# ChangeLog for games-board/pokerth
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Jan 2008; Markus Ullmann <jokey@gentoo.org> pokerth-0.5:
  Drop old

  16 Dec 2007; Thomas Pani (thpani) <thomas.pani@gmail.com>
  +pokerth-0.6.ebuild:
  bump to 0.6

  04 Dec 2007; Jakub Moc <jakub@gentoo.org> pokerth-0.5.ebuild:
  Switch to EAPI-1 and slotted deps

  25 Sep 2007; Jakub Moc <jakub@gentoo.org> pokerth-0.5.ebuild:
  Use eqmake4, ebuild cleanup

  24 Sep 2007; Thomas Pani (thpani) <thomas.pani@gmail.com>
  pokerth-0.5.ebuild:
  Added media-libs/libmikmod dependency. Thanks to Tobias Kral <tobias@kral.ws>.

  18 Aug 2007; Thomas Pani (thpani) <thomas.pani@gmail.com> +metadata.xml,
  +pokerth-0.5.ebuild:
  New Ebuild for bug 169238, reviewed by jsin and shillelagh
