@@ -1,4 +1,6 @@
 DIST PokerTH-0.6-src.tar.bz2 4276312 RMD160 bcad8b7a8da012734f52e3461ac03d55512e8b02 SHA1 04657e85eb6fb01324f1680ef0ca8d0769b0c6b3 SHA256 2b149e359be287b1e37e1dff8a696f4619e258cd20041c906942e37fa2b83751
+DIST PokerTH-0.6.1.src.tar.bz2 4333481 RMD160 93d6fa7febca2ae01b58e9adbc59b4647e8ae854 SHA1 a46bb928850267b3d8b34db6476a32e975d2e615 SHA256 bde609e17ed6cc0bb9b7a8c08086c18919fccbd7b06dc76963dbeb210afcc7d9
+EBUILD pokerth-0.6.1.ebuild 1055 RMD160 26fc3c5785120f1ef0217d1b651e0b82eb4737b0 SHA1 08339be4309c1da8d2ac2e139e4f56f9ebdb9e1f SHA256 854f6d4b700c655af12973d3fdc144f283255ac0c08a393fdff4a494a61a8cc8
 EBUILD pokerth-0.6.ebuild 1051 RMD160 8e8f6539adf2a03a7ea67eaef348dac0432ecdee SHA1 9b7237c0e410ab33e6fd7ce82bba5dfdeb4d1629 SHA256 e0d311aeae8200aae3b9dd23e910702bcba2db3be52b25994054e5b6770e6a00
-MISC ChangeLog 812 RMD160 3494fcfacb5a5b048c9f4a6be3a37eba43e6e1db SHA1 fc7399eb9cbe03ae103a92b47a84cdfec0bee772 SHA256 6492e076a8a8607f7248a7ff5e5e9584789cf80b419161df7b2685a5bc9b769b
+MISC ChangeLog 913 RMD160 414953c2f7fb0276337f4a0c5f220530ff3398cd SHA1 79737b11ce4ab81771de78d8cd3760bb38b89f13 SHA256 a41bcf3d3eca4fbb40830420da5ca4001daf2dc51c337b6bb39be4b13b5e096a
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
